update candle data wih redis and timescale
